# rinha

./: .gitignore  Dockerfile  build.sh  compose-dev.sh  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose.yml  executar-teste-local.sh  executar-teste.sh  nginx.conf  nginx_host.conf
app/: .env  Cargo.toml
app/.sqlx/: query-3ef9241c4c4b7fdfabdce69f732d2e82acb3d52ebe0cfaef77a2049579221daa.json  query-597f0e34b1c74ea744e7f3d81611aab64043bcc419b4900cadbbae7653c17f07.json  query-69f76733a05cf8713d1ed56f6d0d76558ebcc95a512815043ddf587e960c8fec.json  query-6ee92cb2313ba8d2797f76e07fa17d95f27ee754883c74a2b11c3c67171d5516.json  query-7dd88eef7e11e713fa9fd5543eae563ad84b8f9cb550c9a7392f3557539fb0a1.json  query-889e297f4f55522980b4cbb7f69f2b04a7f1afcfe29da3603b6474d4c8278a5f.json  query-98be59976aeeb95ee8bc480d7c6affd619d18de5ed46ff5891ae65cee0395d34.json  query-f097d5840dcb202ce46cff7e0010d688605f794656b1af0cd9e128be266c66b1.json  query-f7165a0e3f4e70ba695cc26140a587f076ae9a2e6f6067dbec7f50a8cea3e36d.json
app/db/: script.sql
app/src/: main.rs  persistence.rs
app/src/models/: cliente.rs  mod.rs  saldo.rs  transacao.rs
gatling/: RinhaBackendCrebitosSimulation.scala
