[package]
name = "rinha"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tokio = { version = "1.30.0", features = ["full"] }
sqlx = { version = "0.7.3", features = ["postgres", "macros", "runtime-tokio", "time", "chrono"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
time = { version = "0.3.34", features = ["serde", "macros", "parsing", "formatting"] }
chrono = { version = "0.4.33", features = ["serde"]}
