[package]
name = "rinha"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["macros"] }
tokio = { version = "1.30.0", features = ["full"] }
sqlx = { git = "https://github.com/vkobinski/sqlx",features = ["postgres", "macros", "runtime-tokio", "chrono", "_rt-tokio"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
chrono = { version = "0.4.33", features = ["serde"]}
dotenv = "0.15.0"
